--- a/webapp/src/app/infos/infos.component.html
+++ b/webapp/src/app/infos/infos.component.html
@@ -1,3 +1,9 @@
 <p>
-  infos works!
+  <div *ngIf="test">
+    <h2>{{ test.text | uppercase }} Details</h2>
+    <div><span>id: </span>{{test._id}}</div>
+    <div><span>id: </span>{{test.title}}</div>
+
+  </div>
+  <button (click)="goBack()">go back</button>
 </p>
