--- a/webapp/src/app/home/home.component.html
+++ b/webapp/src/app/home/home.component.html
@@ -1,3 +1,4 @@
-<p>
-  home works!
-</p>
+<a class="nav-item nav-link" href="#">ALED <span class="fa fa-exclamation-triangle"></span><span class="sr-only">(current)</span></a>
+<a class="nav-item nav-link" href="#">En route ?</a>
+<a class="nav-item nav-link" href="#">SAM</a>
+<a class="nav-item nav-link" href="#">Le saviez-vous ?</a>
