Auto stash before merge of "front-end" and "origin/front-end"

--- a/webapp/src/app/infos/infos.component.html
+++ b/webapp/src/app/infos/infos.component.html
@@ -1,4 +1,5 @@
-<p>
+<div>
+  Blop
   <div *ngIf="test">
     <h2>{{ test.text | uppercase }} Details</h2>
     <div><span>id: </span>{{test._id}}</div>
@@ -6,4 +7,4 @@
 
   </div>
   <button (click)="goBack()">go back</button>
-</p>
+</div>
