--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -1,5 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
   <app-navbar></app-navbar>
+<div>
+  Test
+  <router-outlet></router-outlet>
+</div>
 
-<router-outlet></router-outlet>
 
