Home page (arrows on the way, maybe)

--- a/webapp/src/app/home/home.component.html
+++ b/webapp/src/app/home/home.component.html
@@ -1,7 +1,17 @@
-<a class="nav-item nav-link" href="#">ALED <span class="fa fa-exclamation-triangle"></span><span class="sr-only">(current)</span></a>
-<a class="nav-item nav-link" href="#">En route ?</a>
-<a class="nav-item nav-link" href="#">SAM</a>
-<a class="nav-item nav-link" href="#">Le saviez-vous ?</a>
-<div>
-  <a routerLink="/detail/test">Test info</a>
+<br/>
+<div class="container">
+  <div class="col text-center">
+    <button type="button" class="btn btn-block btn-danger" href="/aled">ALED ⚠️<span class="sr-only">(current)</span></button>
+
+    <button type="button" class="btn btn-block btn-danger" href="/voiture">En route ?</button>
+
+    <button type="button" class="btn btn-block btn-warning" href="/sam">SAM</button>
+
+    <button type="button" class="btn btn-block btn-success" href="/infos">Le saviez-vous ?</button>
+
+    <div>
+      <a routerLink="/detail/test">Test info</a>
+    </div>
+  </div>
 </div>
+
