--- a/webapp/src/app/navbar/navbar.component.html
+++ b/webapp/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FFCC99;">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FFC835;">
   <a class="navbar-brand" href="#">AppName</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
