--- a/webapp/src/app/home/home.component.html
+++ b/webapp/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <br/>
 <div class="container">
   <div class="col text-center">
-    <button type="button" class="btn btn-block btn-danger" href="/aled">ALED ⚠️<span class="sr-only">(current)</span></button>
+    <button type="button" class="btn btn-block btn-danger" (click)="goToAled()">ALED ⚠️<span class="sr-only">(current)</span></button>
 
     <button type="button" class="btn btn-block btn-danger" href="/voiture">En route ?</button>
 
