Added sam component
& other aled components for the questions answered (we are making a component per page)

--- a/webapp/src/app/navbar/navbar.component.html
+++ b/webapp/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FFC835;">
-  <a class="navbar-brand" href="/home">AppName</a>
+  <a class="navbar-brand" href="/home">Hamster Futé</a>
   <button *ngIf="!isHome()" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
