--- a/webapp/src/app/home/home.component.html
+++ b/webapp/src/app/home/home.component.html
@@ -2,16 +2,11 @@
 <div class="container">
   <div class="col text-center">
     <button type="button" class="btn btn-block btn-danger" (click)="goToAled()">ALED ⚠️<span class="sr-only">(current)</span></button>
-
     <button type="button" class="btn btn-block btn-danger" (click)="goToVoiture()">En route ?</button>
-
     <button type="button" class="btn btn-block btn-warning" (click)="goToSam()">SAM</button>
-
     <button type="button" class="btn btn-block btn-success" (click)="goToInfos()">Le saviez-vous ?</button>
-
-    <div>
-      <a routerLink="/detail/test">Test info</a>
-    </div>
+    <br/>
+    <img src="../../assets/images/robert-cute.png" height="200" width="150"/>
   </div>
 </div>
 
