--- a/webapp/src/app/navbar/navbar.component.html
+++ b/webapp/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FFC835;">
-  <a class="navbar-brand" href="/home">Hamster Futé</a>
+  <a class="navbar-brand" (click)="goHome()">Hamster Futé</a>
   <button *ngIf="!isHome()" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -14,3 +14,4 @@
     </div>
   </div>
 </nav>
+<br/>
