--- a/webapp/src/app/infos/infos.component.css
+++ b/webapp/src/app/infos/infos.component.css
@@ -1,18 +1,16 @@
-.container {
+.mainContainer {
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
-.content {
+.mainContent {
   display: flex;
   height: 100%;
   align-items: center;
   justify-content: center;
 }
 
-.sidenav {
+.infoSidenav {
   padding: 20px;
-}
-.demo-panel {
-  margin: 10px;
+  background-color: lightgray;
 }
