--- a/webapp/src/app/infos/infos.component.html
+++ b/webapp/src/app/infos/infos.component.html
@@ -1,34 +1,33 @@
 <div>
 
-  <mat-sidenav-container class="container">
-    <mat-sidenav #sidenav class="sidenav">
-      Sidenav content goes here!
-    </mat-sidenav>
+  <mat-drawer-container class="mainContainer" autosize>
+    <mat-drawer #drawer class="infoSidenav" mode="side">
+      <p>Categorie</p>
+    </mat-drawer>
 
-    <div>
-      Infos
+    <div class="mainContent">
+
+      <div class="container">
+        <div class="row">
+          <div class="col-3"></div>
+          <button class="col-6" mat-raised-button (click)="shuffle()">Au hazard</button>
+        </div>
+        <div class="row">
+          <div class="col-3"></div>
+          <button class="col-6 col-lg-3" mat-raised-button (click)="drawer.toggle()"> Choisir </button>
+        </div>
+
+
+        <div *ngIf="test">
+          <h2>{{ test.text | uppercase }} Details</h2>
+          <div><span>id: </span>{{test._id}}</div>
+          <div><span>id: </span>{{test.title}}</div>
+        </div>
+      </div>
+
     </div>
 
-
-
-    <div class="content">
-      <div class="row">
-        <button class="col" mat-raised-button (click)="shuffle()">Suivant</button>
-      </div>
-      <div class="row">
-        <button class="col" mat-raised-button (click)="sidenav.open()"> Open Sidenav </button>
-      </div>
-
-
-      <div *ngIf="test">
-        <h2>{{ test.text | uppercase }} Details</h2>
-        <div><span>id: </span>{{test._id}}</div>
-        <div><span>id: </span>{{test.title}}</div>
-      </div>
-
-    </div>
-
-  </mat-sidenav-container>
+  </mat-drawer-container>
 
 </div>
 
