Aled presque fini
FInir la page téléphone

--- a/webapp/src/app/aled/aled-breathe/aled-breathe.component.html
+++ b/webapp/src/app/aled/aled-breathe/aled-breathe.component.html
@@ -11,7 +11,7 @@
     </p>
     <div class="row">
       <div class="col">
-        <button type="button" class="btn btn-success" (click)="gotToPls()">Oui</button>
+        <button type="button" class="btn btn-success" (click)="goToPls()">Oui</button>
       </div>
       <div class="col">
         <button type="button" class="btn btn-danger" (click)="goToBad()">Non</button>
