--- a/webapp/src/app/navbar/navbar.component.html
+++ b/webapp/src/app/navbar/navbar.component.html
@@ -1,4 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FFC835;">
+  <span *ngIf="!isHome()" (click)="goBack()">
+    < Back
+  </span>
   <a class="navbar-brand" (click)="goHome()">Hamster Futé</a>
   <button *ngIf="!isHome()" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
