--- a/webapp/src/app/aled/aled-bad/aled-bad.component.html
+++ b/webapp/src/app/aled/aled-bad/aled-bad.component.html
@@ -15,19 +15,22 @@
     <p>
       Numéros à appeler
     </p>
-    <ul>
-      <li>18 : Pompiers</li>
-      <li>15 : Samu</li>
-      <li>112 : Numéro international</li>
-    </ul>
-
+    <div class="text-left">
+      <span class="badge badge-pill badge-success">18 </span> Pompiers <br/>
+      <span class="badge badge-pill badge-success">15 </span> Samu <br/>
+      <span class="badge badge-pill badge-success">112 </span> Numéro international
+    </div>
+    <br/>
     <p>
       Que dire au téléphone ?
-      S'identifiez Nom, Prenom, Telephone
-      Indiquez où se situe l'accident et comment y accéder
-      Indiquez ce qu'il se passe
-      Risque possible
-      Ne pas racrocher tant que la personne au bout du fil ne vous dit pas de le faire, suivre ses instructions
+    </p>
+    <ul class="text-left">
+      <li>Nom, Prénom, Téléphone</li>
+      <li>Lieu de l'accident</li>
+      <li>Description des faits</li>
+    </ul>
+    <p>
+      <span class="badge badge-pill badge-danger"><b>Ne jamais raccrocher en premier</b></span>
     </p>
   </div>
 </div>
