Adding links to navigate

--- a/webapp/src/app/navbar/navbar.component.html
+++ b/webapp/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/aled">ALED <span class="fa fa-exclamation-triangle"></span><span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="/voiture">En route ?</a>
+        <a class="nav-item nav-link" href="/drive-test">En route ?</a>
         <a class="nav-item nav-link" href="/sam">SAM</a>
         <a class="nav-item nav-link" href="/infos">Le saviez-vous ?</a>
       </div>
