--- a/webapp/src/app/home/home.component.html
+++ b/webapp/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="col text-center">
     <button type="button" class="btn btn-block btn-danger" (click)="goToAled()">ALED ⚠️<span class="sr-only">(current)</span></button>
-    <button type="button" class="btn btn-block btn-danger" (click)="goToVoiture()">En route ?</button>
-    <button type="button" class="btn btn-block btn-warning" (click)="goToSam()">SAM</button>
+    <button type="button" class="btn btn-block" style="background-color: #FF8835; color: white " (click)="goToVoiture()">En route ?</button>
+    <button type="button" class="btn btn-block btn-warning" style="color: white" (click)="goToSam()">SAM</button>
     <button type="button" class="btn btn-block btn-success" (click)="goToInfos()">Le saviez-vous ?</button>
     <br/>
     <img src="../../assets/images/robert-cute.png" height="200" width="150"/>
