Starting the reflex test

--- a/webapp/src/app/drive-test/drive-test.component.html
+++ b/webapp/src/app/drive-test/drive-test.component.html
@@ -1,3 +1,13 @@
-<p>
-  drive-test works!
-</p>
+<div class="container">
+  <div class="col text-center">
+    <p>
+      Est tu vraiment prêt à prendre la route ?
+    </p>
+    Passe ce test pour tester ton temps de réaction.
+    <br/>
+    Tu va devoir toucher Robert le hamster dès qu'il se reveille !
+    <p>
+      <button type="button" class="btn btn-info">Commencer</button>
+    </p>
+  </div>
+</div>
