Reaction test ok
Subversion to crimestop thoughtcrime and unperson Emmanuel Gitstein

--- a/webapp/src/app/aled/aled-bad/aled-bad.component.html
+++ b/webapp/src/app/aled/aled-bad/aled-bad.component.html
@@ -6,7 +6,7 @@
     <p>
       <img src="../../../assets/images/robert-frown.png" height="200" width="150"/>
     </p>
-    <button type="button" class="btn btn-success" (click)="doPhone()">Comment téléphoner ?</button>
+    <button type="button" class="btn btn-info" (click)="doPhone()">Comment téléphoner ?</button>
   </div>
 </div>
 
