--- a/webapp/src/app/aled/aled-pls/aled-pls.component.html
+++ b/webapp/src/app/aled/aled-pls/aled-pls.component.html
@@ -6,7 +6,7 @@
     <p>
       <img src="../../../assets/images/robert-cute.png" height="200" width="150"/>
     </p>
-    <button type="button" class="btn btn-success" (click)="doPls()">Comment mettre en PLS ?</button>
+    <button type="button" class="btn btn-info" (click)="doPls()">Comment mettre en PLS ?</button>
   </div>
 </div>
 
