Page des crédits

--- a/webapp/src/app/home/home.component.html
+++ b/webapp/src/app/home/home.component.html
@@ -6,8 +6,8 @@
     <button type="button" class="btn btn-block btn-success" (click)="goToInfos()">Le saviez-vous ?</button>
     <br/>
     <img src="../../assets/images/robert-cute.png" height="200" width="150"/>
-    <br/>
-    <a href="/creds">Crédits</a>
+    <br/><br/>
+    <span (click)="goToCreds()">Crédits</span>
   </div>
 </div>
 
