--- a/webapp/src/app/sam-choice/sam-choice.component.html
+++ b/webapp/src/app/sam-choice/sam-choice.component.html
@@ -2,8 +2,9 @@
   <div class="col text-center">
     <div *ngIf="sam;else other_content">
       <div *ngIf="sam">
-        <div>Sam est
-          <span class="badge badge-pill badge-success">{{sam.name}}</span>
+        <div>
+          <span class="badge badge-pill badge-success">{{sam.name}} </span>
+          est Sam
         </div>
       </div>
     </div>
