--- a/webapp/src/app/infos/infos.component.html
+++ b/webapp/src/app/infos/infos.component.html
@@ -7,22 +7,20 @@
 
     <div class="mainContent">
 
+
+
       <div class="container">
-        <div class="row">
-          <div class="col-3"></div>
-          <button class="col-6" mat-raised-button (click)="shuffle()">Au hazard</button>
-        </div>
-        <div class="row">
-          <div class="col-3"></div>
-          <button class="col-6 col-lg-3" mat-raised-button (click)="drawer.toggle()"> Choisir </button>
+
+        <div *ngIf="info" class="row">
+          <div class="col-1"></div>
+          <div class="col-10">{{info.text}}</div>
         </div>
 
-
-        <div *ngIf="test">
-          <h2>{{ test.text | uppercase }} Details</h2>
-          <div><span>id: </span>{{test._id}}</div>
-          <div><span>id: </span>{{test.title}}</div>
+        <div class="row">
+          <div class="col-3"></div>
+          <button class="col-6" mat-raised-button (click)="choose()">Au hazard</button>
         </div>
+
       </div>
 
     </div>
